scripts/es-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-nautilus
    kubernetes.io/tls-acme: "true"
  labels:
    app.kubernetes.io/name: kibana
  name: kibana
  namespace: idracsolution
spec:
  rules:
  - host: kibana.idracsolution.<hostname>
    http:
      paths:
      - backend:
          serviceName: idracsolution-elastic-stack-kibana
          servicePort: 443
        path: /

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-nautilus
    kubernetes.io/tls-acme: "true"
  labels:
    app.kubernetes.io/name: es-client
  name: es-client
  namespace: idracsolution
spec:
  rules:
  - host: es-client.idracsolution.<hostname>
    http:
      paths:
      - backend:
          serviceName: idracsolution-elastic-stack-elasticsearch-client
          servicePort: 9200
        path: /
