scripts/gateway-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-nautilus
    kubernetes.io/tls-acme: "true"
  labels:
    app.kubernetes.io/name: gateway
  name: gateway
  namespace: idracsolution
spec:
  rules:
  - host: gateway.idracsolution.<hostname>
    http:
      paths:
      - backend:
          serviceName: gateway
          servicePort: 80
        path: /
  tls:
  - hosts:
    - gateway.idracsolution.<hostname>
    secretName: idracsolution-tls
